# DDA_to_XML

./: .gitignore  CMakeLists.txt  COPYING  DDA_Definition.xml  DDA_FileFormat.cpp  DDA_FileFormat.h  DDA_Operators.h  DDA_Parser.cpp  DDA_Parser.h  DDA_Reader.7z  DDA_Reader.sln  DDA_Reader.vcxproj  DDA_Reader.vcxproj.filters  README.md  compile_osx.sh  main.cpp
Debug/: DDA_Reader.ilk  testRun.dda  vc120.idb
Debug/DDA_Reader.tlog/: CL.read.1.tlog  CL.write.1.tlog  DDA_Reader.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: DDA_Definition.xml  DDA_Reader.bat  DDA_Reader.sh  HOWTO.txt
Release/DDA_Reader.tlog/: CL.read.1.tlog  CL.write.1.tlog  DDA_Reader.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/: test_fileformat.cpp  test_operators.cpp  test_parser.cpp
