cmake_minimum_required(VERSION 3.16)
project(DDA_Reader VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(pugixml STATIC libs/pugixml/src/pugixml.cpp)
target_include_directories(pugixml PUBLIC libs/pugixml/src)
add_library(dda_core STATIC DDA_FileFormat.cpp DDA_FileFormat.h DDA_Parser.cpp DDA_Parser.h)
target_link_libraries(dda_core PUBLIC pugixml)
target_include_directories(dda_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(DDA_Reader main.cpp)
target_link_libraries(DDA_Reader PRIVATE dda_core)
include(CTest)
if(BUILD_TESTING)
  include(FetchContent)
  FetchContent_Declare(Catch2 GIT_REPOSITORY https://github.com/catchorg/Catch2.git GIT_TAG v3.5.3)
  FetchContent_MakeAvailable(Catch2)
  add_executable(dda_tests tests/test_fileformat.cpp tests/test_parser.cpp tests/test_operators.cpp)
  target_link_libraries(dda_tests PRIVATE dda_core Catch2::Catch2WithMain)
  add_custom_command(TARGET dda_tests POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/DDA_Definition.xml $<TARGET_FILE_DIR:dda_tests>/DDA_Definition.xml)
  include(Catch)
  catch_discover_tests(dda_tests)
endif()
